@@ -248,7 +248,7 @@ Turn on Atari BASIC ROM
 .BI \-cart\  filename
 Insert cartridge (CART or raw format)
 .TP
-.BR "\-cart\-type 0" .. 56
+.BR "\-cart\-type 0" .. 59
 Select type of the cartridge inserted with the \fB\-cart\fR option.
 When inserting a raw ROM image its type cannot be detected automaticcaly,
 and must be provided with this option.
@@ -424,6 +424,15 @@ SIC! 256 KB cartridge
 .TP
 .B 56
 SIC! 512 KB cartridge
+.TP
+.B 57
+Standard 2 KB cartridge
+.TP
+.B 58
+Standard 4 KB cartridge
+.TP
+.B 59
+Right slot 4 KB cartridge
 .PD
 .RE
 If this option is not given, the user will be asked to choose the cartridge
@@ -434,7 +443,7 @@ Insert piggyback cartridge (CART or raw format).
 This works only if the first cartridge is a pass-through (currently only
 SpartaDOS X 64KB and 128KB types).
 .TP
-.BR "\-cart2\-type 0" .. 56
+.BR "\-cart2\-type 0" .. 59
 Select type of the cartridge inserted with the \fB-cart2\fR option.
 When inserting a raw ROM image its type cannot be detected automatically,
 and must be provided with this option.
